kustomize/applications/model-registry/base/patches/virtual-service-model-registry-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-registry-ui
spec:
  gateways:
  - ingress-kubeflow/ingress-kubeflow-istio-ingress-gateway-https
