kustomize/applications/model-registry/base/patches/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: model-registry-ui
  labels:
    app: model-registry-ui
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/ingress-kubeflow/sa/ingress-kubeflow
  selector:
    matchLabels:
      app: model-registry-ui
